[gd_scene load_steps=12 format=3 uid="uid://dl8jq22vactqn"]

[ext_resource type="Script" path="res://scripts/inimigoCobra.gd" id="1_bvbbi"]
[ext_resource type="Texture2D" uid="uid://b5q12ay1qxwg" path="res://sprites/Cobra Sprite Sheet.png" id="1_m0vm4"]

[sub_resource type="Animation" id="Animation_sri3b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_glj5q"]
resource_name = "atacar"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"anim_addHit"
}, {
"args": [],
"method": &"anim_fimAtaque"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bjyvn"]
resource_name = "morrer"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_80o17"]
resource_name = "mover"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a437m"]
resource_name = "parado"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pv0xx"]
_data = {
"RESET": SubResource("Animation_sri3b"),
"atacar": SubResource("Animation_glj5q"),
"morrer": SubResource("Animation_bjyvn"),
"mover": SubResource("Animation_80o17"),
"parado": SubResource("Animation_a437m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0bw44"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i7jt5"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4fyu5"]
radius = 8.0

[node name="inimigo_cobra" type="CharacterBody2D" groups=["inimigo"]]
collision_layer = 4
collision_mask = 5
motion_mode = 1
script = ExtResource("1_bvbbi")
speed = 50.0

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -13)
texture = ExtResource("1_m0vm4")
hframes = 8
vframes = 5
frame = 24
region_rect = Rect2(0, 0, 32, 40)

[node name="anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../sprite")
autoplay = "parado"
libraries = {
"": SubResource("AnimationLibrary_pv0xx")
}

[node name="collision" type="CollisionShape2D" parent="."]
show_behind_parent = true
shape = SubResource("CircleShape2D_0bw44")

[node name="getHit" type="Area2D" parent="."]
visible = false
show_behind_parent = true
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="getHit" type="CollisionShape2D" parent="getHit"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_i7jt5")
debug_color = Color(0, 0.631373, 0.478431, 0.113725)

[node name="addHit" type="Area2D" parent="."]
show_behind_parent = true
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="addHit" type="CollisionShape2D" parent="addHit"]
shape = SubResource("CircleShape2D_4fyu5")
debug_color = Color(0.964706, 0, 0.482353, 0.117647)

[connection signal="body_entered" from="addHit" to="." method="_on_addHit_body_entered"]
[connection signal="body_exited" from="addHit" to="." method="_on_addHit_body_exited"]
